[gd_scene load_steps=43 format=2]

[ext_resource path="res://Sprites/sprites.png" type="Texture" id=1]
[ext_resource path="res://Prefabs/Reindeer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Rudolph.gd" type="Script" id=3]
[ext_resource path="res://Scripts/ReindeerHerd.gd" type="Script" id=4]
[ext_resource path="res://Scripts/SleighLines.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Sleigh.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Cannon.gd" type="Script" id=7]
[ext_resource path="res://Scripts/CannonPreview.gd" type="Script" id=8]
[ext_resource path="res://Prefabs/Present.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scripts/HouseSpawner.gd" type="Script" id=10]
[ext_resource path="res://Prefabs/House.tscn" type="PackedScene" id=11]
[ext_resource path="res://Prefabs/Snowflake.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scripts/SnowflakeSpawner.gd" type="Script" id=13]
[ext_resource path="res://Scripts/CannonReloadBar.gd" type="Script" id=14]
[ext_resource path="res://Scripts/RedFlash.gd" type="Script" id=15]
[ext_resource path="res://Sprites/santa_heart.png" type="Texture" id=16]
[ext_resource path="res://Scripts/Hearts.gd" type="Script" id=17]
[ext_resource path="res://Scripts/ScoreManager.gd" type="Script" id=18]
[ext_resource path="res://Prefabs/ScorePopup.tscn" type="PackedScene" id=19]
[ext_resource path="res://Fonts/CasualEncounter.ttf" type="DynamicFontData" id=20]
[ext_resource path="res://Scripts/ScoreText.gd" type="Script" id=21]
[ext_resource path="res://Scripts/GameManager.gd" type="Script" id=22]
[ext_resource path="res://Sprites/santas_dead.png" type="Texture" id=23]
[ext_resource path="res://Scripts/Santa.gd" type="Script" id=24]
[ext_resource path="res://Sprites/particle.png" type="Texture" id=25]
[ext_resource path="res://Sounds/hurt_61.wav" type="AudioStream" id=26]
[ext_resource path="res://Sounds/cannon_shoot_25.wav" type="AudioStream" id=27]
[ext_resource path="res://Sounds/player_death_49.wav" type="AudioStream" id=28]
[ext_resource path="res://Sounds/present_drop_14.wav" type="AudioStream" id=29]
[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=30]
[ext_resource path="res://Prefabs/SnowParticles.tscn" type="PackedScene" id=31]
[ext_resource path="res://Sprites/present_previews.png" type="Texture" id=32]
[ext_resource path="res://Scripts/Present.gd" type="Script" id=33]
[ext_resource path="res://Prefabs/AngleHouse.tscn" type="PackedScene" id=34]
[ext_resource path="res://Sounds/present_bounce_2.wav" type="AudioStream" id=35]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 5 )

[sub_resource type="Curve" id=4]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0, 45.045 ), 0.0, 0.0, 0, 0, Vector2( 1, -200 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, -0.290908, 0, 0, Vector2( 1, 0 ), -0.0300578, 0.0, 0, 0 ]

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 20 )

[sub_resource type="DynamicFont" id=6]
size = 8
font_data = ExtResource( 20 )

[sub_resource type="DynamicFont" id=7]
size = 8
extra_spacing_bottom = 5
font_data = ExtResource( 20 )

[node name="Node2D" type="Node2D"]

[node name="Rudolph" type="Sprite" parent="."]
position = Vector2( 186, 79 )
texture = ExtResource( 1 )
hframes = 2
vframes = 2
frame = 2
script = ExtResource( 3 )
speed = 18.0
sleighPath = NodePath("../Sleigh")
knockback_power = 20

[node name="Hit" type="AudioStreamPlayer" parent="Rudolph"]
stream = ExtResource( 26 )

[node name="Reindeer" type="Node2D" parent="."]
script = ExtResource( 4 )
rudolphPath = NodePath("../Rudolph")
santaPath = NodePath("../Sleigh")

[node name="Reindeer" parent="Reindeer" instance=ExtResource( 2 )]
position = Vector2( 173.048, 77 )

[node name="Reindeer4" parent="Reindeer" instance=ExtResource( 2 )]
position = Vector2( 173.097, 88.0484 )
rotation = -0.00606561

[node name="Reindeer2" parent="Reindeer" instance=ExtResource( 2 )]
position = Vector2( 162.048, 77 )

[node name="Reindeer5" parent="Reindeer" instance=ExtResource( 2 )]
position = Vector2( 162.048, 88 )
rotation = -0.00606561

[node name="Reindeer3" parent="Reindeer" instance=ExtResource( 2 )]
position = Vector2( 151.048, 77 )

[node name="Reindeer6" parent="Reindeer" instance=ExtResource( 2 )]
position = Vector2( 151.048, 88 )
rotation = -0.00606561

[node name="Reindeer9" parent="Reindeer" instance=ExtResource( 2 )]
position = Vector2( 140.048, 77 )

[node name="Reindeer7" parent="Reindeer" instance=ExtResource( 2 )]
position = Vector2( 140.048, 88 )
rotation = -0.00606561

[node name="SnowParticles" parent="." instance=ExtResource( 31 )]

[node name="SleighLines" type="Node2D" parent="."]
z_index = -1
z_as_relative = false
script = ExtResource( 5 )
sleighPath = NodePath("../Sleigh")
rudolphPath = NodePath("../Rudolph")
herdPath = NodePath("../Reindeer")

[node name="Sleigh" type="Sprite" parent="."]
position = Vector2( 112, 79 )
z_as_relative = false
texture = ExtResource( 1 )
hframes = 2
vframes = 2
script = ExtResource( 6 )
scorePopupScene = ExtResource( 19 )

[node name="Santa" type="Sprite" parent="Sleigh"]
position = Vector2( 3, -4 )
z_index = -1
z_as_relative = false
texture = ExtResource( 23 )
script = ExtResource( 24 )

[node name="PlayerDeath" type="AudioStreamPlayer" parent="Sleigh/Santa"]
stream = ExtResource( 28 )

[node name="CannonReloadBar" type="Node2D" parent="Sleigh"]
position = Vector2( -9, -1 )
script = ExtResource( 14 )
cannon_path = NodePath("../Cannon")

[node name="Cannon" type="Sprite" parent="Sleigh"]
position = Vector2( -4, -2 )
z_index = 1
z_as_relative = false
texture = ExtResource( 1 )
hframes = 2
vframes = 2
frame = 3
script = ExtResource( 7 )
presentScene = ExtResource( 9 )
fire_particles_path = NodePath("../CannonShotParticles")
present_preview_path = NodePath("../PresentPreview")
sleighPath = NodePath("..")

[node name="Fire" type="AudioStreamPlayer" parent="Sleigh/Cannon"]
stream = ExtResource( 27 )

[node name="CannonPreview" type="Node2D" parent="Sleigh"]
script = ExtResource( 8 )
cannonPath = NodePath("../Cannon")
house_spawner_path = NodePath("../../HouseSpawner")

[node name="Area2D" type="Area2D" parent="Sleigh"]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sleigh/Area2D"]
position = Vector2( -0.5, -0.5 )
shape = SubResource( 1 )

[node name="CannonShotParticles" type="CPUParticles2D" parent="Sleigh"]
position = Vector2( -2, -2 )
emitting = false
amount = 10
lifetime = 0.3
one_shot = true
explosiveness = 1.0
texture = ExtResource( 25 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
linear_accel = 0.5
linear_accel_curve = SubResource( 4 )
scale_amount = 0.15
scale_amount_curve = SubResource( 3 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="Sleigh"]
modulate = Color( 0.160784, 0.678431, 1, 1 )
z_index = -50
amount = 40
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 8, 4 )
gravity = Vector2( 0, 0 )
scale_amount = 2.0
scale_amount_curve = SubResource( 5 )

[node name="PresentPreview" type="Sprite" parent="Sleigh"]
position = Vector2( -5, -9 )
texture = ExtResource( 32 )
hframes = 2
vframes = 2
script = ExtResource( 33 )
is_preview = true

[node name="HouseSpawner" type="Node2D" parent="."]
script = ExtResource( 10 )
house_scene = ExtResource( 11 )
angle_house_scene = ExtResource( 34 )
house_frequency = 1.0
move_speed = 1.7

[node name="PresentLanded" type="AudioStreamPlayer2D" parent="HouseSpawner"]
stream = ExtResource( 29 )

[node name="PresentBounced" type="AudioStreamPlayer2D" parent="HouseSpawner"]
stream = ExtResource( 35 )

[node name="SnowflakeSpawner" type="Node2D" parent="."]
position = Vector2( 326, 3 )
script = ExtResource( 13 )
snowflake_interval = 1.5
snowflake_speed = 1.9
snowflake_vel = Vector2( -1, 0 )
snowflake_spawn_delay = 6.0
spawn_rect_width = 10.0
snowflake_scene = ExtResource( 12 )

[node name="RedFlashContainer" type="Node2D" parent="."]
z_index = -500
z_as_relative = false

[node name="RedFlash" type="ColorRect" parent="RedFlashContainer"]
margin_right = 321.0
margin_bottom = 203.0
color = Color( 0.160784, 0.678431, 1, 0 )
script = ExtResource( 15 )

[node name="Hearts" type="Node2D" parent="."]
position = Vector2( -1, -3 )
script = ExtResource( 17 )

[node name="SantaHeart" type="Sprite" parent="Hearts"]
position = Vector2( 15, 17 )
texture = ExtResource( 16 )

[node name="SantaHeart2" type="Sprite" parent="Hearts"]
position = Vector2( 30, 17 )
texture = ExtResource( 16 )

[node name="SantaHeart3" type="Sprite" parent="Hearts"]
position = Vector2( 45, 17 )
texture = ExtResource( 16 )

[node name="ScoreText" type="Label" parent="."]
margin_left = 240.0
margin_top = 7.0
margin_right = 310.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 2
script = ExtResource( 21 )

[node name="ScoreManager" type="Node2D" parent="."]
script = ExtResource( 18 )
popup_scene = ExtResource( 19 )

[node name="GameManager" type="Node2D" parent="."]
script = ExtResource( 22 )

[node name="PauseMenu" type="Node2D" parent="GameManager"]
pause_mode = 2
visible = false
z_index = 500
script = ExtResource( 30 )

[node name="CenterContainer" type="CenterContainer" parent="GameManager/PauseMenu"]
margin_right = 321.0
margin_bottom = 181.0

[node name="ColorRect" type="ColorRect" parent="GameManager/PauseMenu/CenterContainer"]
margin_left = 90.0
margin_top = 30.0
margin_right = 230.0
margin_bottom = 150.0
rect_min_size = Vector2( 140, 120 )
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="GameManager/PauseMenu/CenterContainer/ColorRect"]
margin_right = 142.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 6 )
text = "Paused"
align = 1
valign = 1

[node name="Label2" type="Label" parent="GameManager/PauseMenu/CenterContainer/ColorRect"]
margin_top = 37.0
margin_right = 139.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 7 )
text = "Press Start/Escape to resume"
align = 1
autowrap = true

[node name="Label3" type="Label" parent="GameManager/PauseMenu/CenterContainer/ColorRect"]
margin_top = 75.0
margin_right = 139.0
margin_bottom = 123.0
custom_fonts/font = SubResource( 7 )
text = "Press B/L to go to title"
align = 1
autowrap = true

[connection signal="hit_registered" from="Rudolph" to="RedFlashContainer/RedFlash" method="_on_Rudolph_hit_registered"]
[connection signal="hit_registered" from="Rudolph" to="Hearts" method="_on_Rudolph_hit_registered"]
[connection signal="hit_registered" from="Rudolph" to="ScoreManager" method="_on_Rudolph_hit_registered"]
[connection signal="got_hit" from="Sleigh" to="Rudolph" method="_on_Sleigh_got_hit"]
[connection signal="santa_fallen" from="Sleigh/Santa" to="GameManager" method="_on_Santa_santa_fallen"]
[connection signal="area_entered" from="Sleigh/Area2D" to="Sleigh" method="_on_Area2D_area_entered"]
[connection signal="present_landed" from="HouseSpawner" to="ScoreManager" method="_on_HouseSpawner_present_landed"]
[connection signal="santas_dead" from="Hearts" to="Sleigh/Santa" method="_on_Hearts_santas_dead"]
[connection signal="got_score" from="ScoreManager" to="Sleigh" method="_on_ScoreManager_got_score"]
[connection signal="got_score" from="ScoreManager" to="ScoreText" method="_on_ScoreManager_got_score"]
